--- a/Pipfile
+++ b/Pipfile
@@ -4,25 +4,68 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+coverage = "==4.3.4"
+flake8 = "==3.3.0"
+tox = "==2.2.1"
+pytest-cov = "==2.4.0"
+# astroid > 2.0.4 is not compatible with pylint1.7
+astroid = "==2.0.3"
+pylint = "==1.7.2"
+
+# Test requirements
+pytest = "==3.0.7"
+py = "==1.4.33"
+mock = "==2.0.0"
+parameterized= "==0.6.1"
+# pathlib2==2.3.2; python_version<"3.4"
+# futures==3.2.0; python_version<"3.2.3"
+# Py3.2 backport
+# backports.tempfile==1.0
+
 
 [packages]
-six = "~=1.11.0"
-chevron = "~=0.12"
-click = "~=7.0"
-enum34 = "~=1.1.6"
-boto3 = ">=1.9.56,~=1.9"
-cookiecutter = "~=1.6.0"
+six = "==1.11.0"
+chevron = "==0.13.1"
+click = "==7.0"
+enum34 = "==1.1.6"
+boto3 = "==1.9.213"
+cookiecutter = "==1.6.0"
 aws-sam-translator = "==1.13.1"
-docker = "~=4.0"
-dateparser = "~=0.7"
-python-dateutil = "~=2.6"
-pathlib2 = "~=2.3.2"
+docker = "==4.0.2"
+dateparser = "==0.7.1"
+python-dateutil = "==2.8.0"
+pathlib2 = "==2.3.4"
 requests = "==2.22.0"
 serverlessrepo = "==0.1.9"
 aws-lambda-builders = "==0.3.0"
-Flask = "~=1.0.2"
-PyYAML = "~=5.1"
+Flask = "==1.0.4"
+PyYAML = "==5.1.2"
 aws-sam-cli = {editable = true,path = "."}
+arrow = "==0.14.5"
+attrs = "==19.1.0"
+binaryornot = "==0.4.4"
+botocore = "==1.12.213"
+certifi = "==2019.6.16"
+chardet = "==3.0.4"
+docutils = "==0.15.2"
+future = "==0.17.1"
+idna = "==2.8"
+itsdangerous = "==1.1.0"
+jinja2-time = "==0.2.0"
+jmespath = "==0.9.4"
+jsonschema = "==3.0.2"
+poyo = "==0.5.0"
+pyrsistent = "==0.15.4"
+pytz = "==2019.2"
+regex = "==2019.8.19"
+s3transfer = "==0.2.1"
+tzlocal = "==2.0.0"
+urllib3 = "==1.25.3"
+whichcraft = "==0.6.0"
+Jinja2 = "==2.10.1"
+MarkupSafe = "==1.1.1"
+websocket_client = "==0.56.0"
+Werkzeug = "==0.15.5"
 
 [requires]
 python_version = "3.7"
