--- a/Pipfile
+++ b/Pipfile
@@ -22,7 +22,7 @@ parameterized= "==0.6.1"
 # pathlib2==2.3.2; python_version<"3.4"
 # futures==3.2.0; python_version<"3.2.3"
 # Py3.2 backport
-# backports.tempfile==1.0
+# backports.tempfile = "==1.0"
 
 
 [packages]
