install correct python version

--- a/appveyor-windows.yml
+++ b/appveyor-windows.yml
@@ -30,6 +30,7 @@ cache:
   - C:\ProgramData\chocolatey\lib -> appveyor.yml
 
 install:
+
     # Make sure the temp directory exists for Python to use.
     - "mkdir D:\\tmp"
     - "set PATH=%PYTHON%;%PYTHON%\\Scripts;%PYTHON%\\bin;%PATH%"
@@ -64,6 +65,10 @@ install:
     # Switch to Docker Linux containers
     - ps: Switch-DockerLinux
   
+    # Make sure the right Python version is installed for SAM CLI to work
+    - choco install python --version $PYTHON_VERSION
+    - refreshenv
+
     - "python --version"
     # Upgrade setuptools, wheel and virtualenv
     - "python -m pip install --upgrade setuptools wheel virtualenv"
