--- a/appveyor-windows.yml
+++ b/appveyor-windows.yml
@@ -16,7 +16,6 @@ environment:
 
   # MSI Installers only use Py3.6.6. It is sufficient to test with this version here.
   PYTHON_HOME: "C:\\Python36-x64"
-  PYTHONHOME: "C:\\Python36-x64"
   PYTHON_VERSION: '3.6.8'
   PYTHON_ARCH: '64'
 
@@ -34,8 +33,22 @@ install:
 
     # Make sure the temp directory exists for Python to use.
     - "mkdir D:\\tmp"
-    - "set PATH=%PYTHON_HOME%;%PYTHON_HOME%\\Scripts;%PYTHON_HOME%\\bin;%PATH%"
+    - ps: "$env:PATH = $env:PYTHON_HOME;$env:PYTHON_HOME\\Scripts;$env:PATH"
     - "python --version"
+
+    # Upgrade setuptools, wheel and virtualenv
+    - "python -m pip install --upgrade setuptools wheel virtualenv"
+
+    # Create new virtual environment and activate it
+    - "rm -rf venv"
+    - "python -m virtualenv venv"
+    - "venv\\Scripts\\activate"
+    - "python -c \"import sys; print(sys.executable)\""
+    - "python --version"
+
+    # Actually install SAM CLI's dependencies
+    - "pip install -e \".[dev]\""
+
 
     # To run Nodejs workflow integ tests
     - ps: Install-Product node 10
@@ -66,19 +79,6 @@ install:
 
     # Echo final Path
     - "echo %PATH%"
-
-    # Upgrade setuptools, wheel and virtualenv
-    - "python -m pip install --upgrade setuptools wheel virtualenv"
-
-    # Create new virtual environment and activate it
-    - "rm -rf venv"
-    - "python -m virtualenv venv"
-    - "venv\\Scripts\\activate"
-    - "python -c \"import sys; print(sys.executable)\""
-    - "python --version"
-
-    # Actually install SAM CLI's dependencies
-    - "pip install -e \".[dev]\""
 
 test_script:
     - "pytest -vv tests/integration"
