--- a/appveyor-windows.yml
+++ b/appveyor-windows.yml
@@ -16,6 +16,7 @@ environment:
 
   # MSI Installers only use Py3.6.6. It is sufficient to test with this version here.
   PYTHON_HOME: "C:\\Python36-x64"
+  PYTHON_HOME_SCRIPT: "C:\\Python36-x64\\Scripts"
   PYTHON_VERSION: '3.6.8'
   PYTHON_ARCH: '64'
 
@@ -33,7 +34,7 @@ install:
 
     # Make sure the temp directory exists for Python to use.
     - "mkdir D:\\tmp"
-    - ps: "$env:PATH = $env:PYTHON_HOME;$env:PYTHON_HOME\\Scripts;$env:PATH"
+    - ps: "$env:PATH = $env:PYTHON_HOME;$env:PYTHON_HOME_SCRIPT;$env:PATH"
     - "python --version"
 
     # Upgrade setuptools, wheel and virtualenv
