--- a/appveyor-windows.yml
+++ b/appveyor-windows.yml
@@ -34,14 +34,15 @@ install:
 
     # Make sure the temp directory exists for Python to use.
     - "mkdir D:\\tmp"
-    - ps: "$env:PATH = $env:PYTHON_HOME;$env:PYTHON_HOME_SCRIPT;$env:PATH"
+    - "$env:PATH = $env:PYTHON_HOME;$env:PYTHON_HOME_SCRIPT;$env:PATH"
+    - "echo %PATH%"
     - "python --version"
 
     # Upgrade setuptools, wheel and virtualenv
     - "python -m pip install --upgrade setuptools wheel virtualenv"
 
     # Create new virtual environment and activate it
-    - "rm -rf venv"
+    - "rm -r -fo venv"
     - "python -m virtualenv venv"
     - "venv\\Scripts\\activate"
     - "python -c \"import sys; print(sys.executable)\""
@@ -52,7 +53,7 @@ install:
 
 
     # To run Nodejs workflow integ tests
-    - ps: Install-Product node 10
+    - "Install-Product node 10"
     # setup Ruby
     - "choco install ruby --version 2.5.3.101 --force -y"
     - "refreshenv"
