fix: correct python path

--- a/appveyor-windows.yml
+++ b/appveyor-windows.yml
@@ -17,7 +17,7 @@ environment:
   # MSI Installers only use Py3.6.6. It is sufficient to test with this version here.
   PYTHON_HOME: "C:\\Python36-x64"
   PYTHON_SCRIPTS: "C:\\Python36-x64\\Scripts"
-  PYTHON_EXE: "C:\\Python36-x64\\Scripts\\python.exe"
+  PYTHON_EXE: "C:\\Python36-x64\\python.exe"
   PYTHON_VERSION: '3.6.8'
   PYTHON_ARCH: '64'
 
