--- a/appveyor-windows.yml
+++ b/appveyor-windows.yml
@@ -25,7 +25,7 @@ environment:
 
 init:
   # Uncomment this for RDP
-  # - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
   - ps: gcim Win32_Processor | % { "$($_.NumberOfLogicalProcessors) logical CPUs" }
   - ps: gcim Win32_OperatingSystem | % { "$([int]($_.TotalVisibleMemorySize/1mb)) Gb" }
 
@@ -86,11 +86,11 @@ install:
     # Echo final Path
     - "echo %PATH%"
 
-test_script:
+# test_script:
     # Reactivate virtualenv before running tests
-    - "venv\\Scripts\\activate"
-    - "pytest -vv tests/integration"
+    # - "venv\\Scripts\\activate"
+    # - "pytest -vv tests/integration"
 
 # Uncomment for RDP
-# on_finish:
-#   - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+on_finish:
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
