--- a/appveyor.yml
+++ b/appveyor.yml
@@ -82,6 +82,7 @@ test_script:
     # Runs only in Linux
     - sh: "pytest -vv tests/integration"
     - sh: "/tmp/black --check setup.py tests samcli"
+    - sh: "python scripts/check-isolated-needs-update.py"
 
     # Smoke tests run in parallel - it runs on both Linux & Windows
     # Presence of the RUN_SMOKE envvar will run the smoke tests
