try non-quoted version

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,7 +30,7 @@ for:
       - "echo %PATH%"
       - "python --version"
       # Upgrade setuptools, wheel and virtualenv
-      - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
+      - SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%
       - "python -m pip install --upgrade setuptools wheel virtualenv"
 
       # Create new virtual environment and activate it
