Added test templates as a part of SAM 1.15.0 release

--- a/tests/functional/commands/validate/lib/models/all_policy_templates.yaml
+++ b/tests/functional/commands/validate/lib/models/all_policy_templates.yaml
@@ -98,8 +98,7 @@ Resources:
 
         - CloudWatchDashboardPolicy: {}
 
-        - RekognitionFacesPolicy:
-            CollectionId: collection
+        - RekognitionFacesPolicy: {}
 
         - RekognitionLabelsPolicy: {}
 
@@ -146,3 +145,9 @@ Resources:
 
         - StepFunctionsExecutionPolicy:
             StateMachineName: name
+
+        - CodeCommitCrudPolicy:
+            RepositoryName: name
+
+        - CodeCommitReadPolicy:
+            RepositoryName: name
