--- a/tests/functional/commands/validate/lib/models/api_with_path_parameters.yaml
+++ b/tests/functional/commands/validate/lib/models/api_with_path_parameters.yaml
@@ -1,22 +1,20 @@
-Globals:
-  Api:
-    OpenApiVersion: 3.0.1
-    Cors: '*'
-
 Resources:
-  ImplicitApiFunction:
+  HtmlFunction:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: s3://sam-demo-bucket/member_portal.zip
       Handler: index.gethtml
-      Runtime: nodejs8.10
+      Runtime: nodejs4.3
       Events:
         GetHtml:
           Type: Api
           Properties:
-            Path: /
+            RestApiId: HtmlApi
+            Path: /{prameter}/resources
             Method: get
-  ExplicitApi:
+
+  HtmlApi:
     Type: AWS::Serverless::Api
     Properties:
       StageName: Prod
+      DefinitionUri: s3://sam-demo-bucket/webpage_swagger.json
