Try forcing encoding

--- a/tests/smoke/templates/sar/AmazonConnectSalesforceLambda-template.yaml
+++ b/tests/smoke/templates/sar/AmazonConnectSalesforceLambda-template.yaml
@@ -1,3 +1,4 @@
+# -*- coding: utf-8 -*-
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: Amazon Connect SalesForce Lambda integration
