--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ requires = ["setuptools", "wheel"]  # PEP 508 specifications.
 
 [tool.black]
 line-length = 120
-target_version = ['py37', 'py27', 'py36']
+target_version = ['py37', 'py36']
 exclude = '''
 
 (
@@ -17,6 +17,7 @@ exclude = '''
     | dist
     | pip-wheel-metadata
     | samcli/local/init/templates
+    | tests/integration/testdata
   )/
 )
 '''
