--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,11 +12,13 @@ environment:
     - PYTHON_HOME: "C:\\Python36-x64"
       PYTHON_VERSION: '3.6.8'
       PYTHON_ARCH: '64'
+      NOSE_PARAMETERIZED_NO_WARN: 1
 
     - PYTHON_HOME: "C:\\Python37-x64"
       PYTHON_VERSION: '3.7.4'
       PYTHON_ARCH: '64'
       RUN_SMOKE: 1
+      NOSE_PARAMETERIZED_NO_WARN: 1
 
 for:
   - 
