--- a/appveyor-windows.yml
+++ b/appveyor-windows.yml
@@ -40,6 +40,8 @@ install:
 
     # Make sure the temp directory exists for Python to use.
     - ps: "mkdir -Force D:\\tmp"
+    - "SET PATH=%PYTHON_HOME%;%PATH%"
+    - "echo %PYTHON_HOME%"
     - "echo %PATH%"
     - "python --version"
 
@@ -47,11 +49,8 @@ install:
     - "python -m pip install --upgrade setuptools wheel virtualenv"
 
     # Create new virtual environment with chosen python version and activate it
-    - "rm -rf venv"
-    - "dir C:\\Python36-x64"
-    - "virtualenv -p %PYTHON_EXE% venv"
+    - "python -m virtualenv venv"
     - "venv\\Scripts\\activate"
-    - "python -c \"import sys; print(sys.executable)\""
     - "python --version"
 
     # Actually install SAM CLI's dependencies
