fix: mark certain gates as optional

--- a/appveyor-windows-build-java.yml
+++ b/appveyor-windows-build-java.yml
@@ -27,6 +27,13 @@ environment:
   HOMEDRIVE: 'C:'
   HOMEPATH: 'C:\Users\appveyor'
 
+  matrix:
+    - optional_gate: true
+
+matrix:
+  allow_failures:
+    - optional_gate: true
+
 init:
   # Uncomment this for RDP
   - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
