--- a/tests/integration/testdata/start_api/cdk-sample-output.yaml
+++ b/tests/integration/testdata/start_api/cdk-sample-output.yaml
@@ -26,6 +26,7 @@ Resources:
       Code: '.'
       Handler: main.handler
       Runtime: python3.6
+      Timeout: 20
 
   HelloHandlerApiPermissionANYAC4E141E:
     Type: AWS::Lambda::Permission
